# watch-rust

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  publish.yml  rust.yml
src/: lib.rs  main.rs
watch-rs/: Cargo.toml
watch-rs/src/: lib.rs
watch-rust/: Cargo.toml
