[package]
name = "watch-rs"
version = "0.1.3"
description = "A Rust implementation of Linux's `watch`"
edition = "2021"
authors = ["DrEsteban"]
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/DrEsteban/watch-rust"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
crossterm = "0.27.0"